增加语言包

--- a/website/static/language/language.json
+++ b/website/static/language/language.json
@@ -66,5 +66,6 @@
   "noMoreGoods": "没有更多商品了~ | No more goods.",
   "noMoreData": "没有更多数据了~ | No more data.",
   "commodityDetails": "商品详情 | Commodity details",
+  "noWereFoundGoods": "没有搜索到商品哦~ | No goods were found.",
   "filter": "筛选 | Filter"
 }
